fix: apply text spacing using heading as reference based on w3 WCAG22 css spec(#154)

--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -7,9 +7,8 @@
     }
     &-title {
       display: block;
-      margin: 0px;
-      a,
-      h3 {
+      margin: 0!important;
+      a {
         background-color: var(--color-bg);
         color: var(--color-primary);
         padding: 5px 10px 5px 10px;
@@ -46,10 +45,8 @@
     clear: both;
     &-title {
       display: inline-block;
-      a,
-      h4 {
+      a {
         padding: inherit;
-        margin-left: 0;
         font-family: PT-Sans-S55;
       }
     }
